@@ -1,3 +1,8 @@
+1999-06-22  Andrew Haley  <aph@cygnus.com>
+
+	* verify.c (verify_jvm_instructions): Check for pending blocks
+	before invalid PC test and opcode switch, not after.
+
 1999-06-21  Andrew Haley  <aph@cygnus.com>
 
         * except.c (find_handler_in_range): The upper limit for exception
